...
    <string name="alert_dialog_title_warning">Warning</string>
    <string name="alert_dialog_message_event_addition">Are you sure you want to cancel the addition?</string>
    <string name="alert_dialog_message_registration">Are you sure you want to cancel the registration?</string>
    <string name="alert_dialog_message_confirm_event_addition">Confirm the event data?</string>
    <string name="alert_dialog_message_confirm_registration">Confirm the user data?</string>
    <string name="alert_dialog_message_telegram_option">Do you want enable telegram notifications?</string>
    <string name="alert_dialog_positive_button">Yes</string>
    <string name="alert_dialog_negative_button">No</string>
    <string name="alert_dialog_message_confirm_event_removal">Are you sure you want to remove the event selected?</string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_yet_registered">"Not yet registered? "</string>
    <string name="sign_in_now"><u>Sign in now!</u></string>
    <string name="continue_without_logging_in"><u>Continue without logging in</u></string>
    <string name="empty_email_field_message">The email field cannot be empty.</string>
...
    <string name="empty_description_field_message">The description field cannot be empty.</string>
    <string name="empty_date_field_message">The date field cannot be empty.</string>
    <string name="empty_from_time_field_message">The start time field cannot be empty.</string>
    <string name="empty_to_time_field_message">The end time field cannot be empty.</string>
    <string name="successful_add_event">The event has been successfully added.</string>

    <string name="modify">Modify</string>
    <string name="remove">Remove</string>

    <string name="which_events">Events to show</string>
    <string name="past_events">Past events</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="between_dates_events">Events between two dates</string>
...
    <string name="to_date">To date</string>
    <string name="empty_from_date_field_message">The initial date cannot be empty.</string>
    <string name="empty_to_date_field_message">The final date cannot be empty.</string>
    <string name="_from_date">"from "</string>
    <string name="_to_date">" to "</string>
    <string name="no_events_to_view">There are not events to view.</string>
    <string name="done">Done</string>
    <string name="invalid_date_field_message">The date entered has already passed.</string>
    <string name="alert_dialog_message_confirm_event_editing">Validate event changes?</string>
    <string name="successful_modified_event">The event has been successfully modified.</string>
    <string name="alert_dialog_message_event_editing">Are you sure you want to cancel the editing?</string>
    <string name="modify_your_profile">Modify your profile</string>
    <string name="alert_dialog_message_confirm_modify_user">Validate user changes?</string>
...
